# IoT_Project

./: CMakeLists.txt  README.txt
backend/: CMakeLists.txt  database.py  server.cpp  test_insert.py
database/: data.db  note.txt  schema.sql
include/: BusinessHandler.h  Saver.h  fire_sensor.h
scripts/: start.sh
src/: BusinessHandler.cpp  CMakeLists.txt  Saver.cpp  fire_sensor.cpp  main.cpp
